# rust-compression

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: my_benchmark.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: bwt.rs  decode_bwt.rs  decode_huffman.rs  fuzz_target_1.rs  huffman.rs  movetofront.rs
src/: lib.rs  main.rs
src/algorithm/: bwt.rs  huffman.rs  mod.rs  movetofront.rs
