[package]
name = "compression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.perf]
inherits = "bench"
debug = 1

[dependencies]

clap = {version = "3.2.8", features = ['derive', 'std'], default-features = false}
rand = "0.8.5"

[dev-dependencies]

criterion = "0.3"

[features]

verbose = []

[[bench]]

name = "my_benchmark"
harness = false